# Actix-Workspace

./: .env  .gitignore  Cargo.toml
wasm-client/: .gitignore  Cargo.toml  package-lock.json
wasm-client/src/models/: course.rs
wasm-client/www/: index.js  webpack.config.js
wasm-pack-template/: Cargo.toml
wasm-pack-template/src/: lib.rs
webapp/: Cargo.toml
webapp/src/: errors.rs  handlers.rs  mod.rs  models.rs  routers.rs
webapp/static/: register.html  teachers.html
webservice/: Cargo.toml
webservice/src/: db_access.rs  errors.rs  handlers.rs  models.rs  routers.rs  state.rs
webservice/src/dbaccess/: course.rs  teacher.rs
webservice/src/handlers/: course.rs  general.rs  teacher.rs
webservice/src/models/: course.rs  teacher.rs
